display persons page

--- a/frontend/src/app/persons/persons.component.html
+++ b/frontend/src/app/persons/persons.component.html
@@ -1,3 +1,4 @@
 <div class="w-100">
   <p class="text-xl-900 text-green-500">persons works!</p>
+  <app-person-table [persons]="persons"></app-person-table>
 </div>
