--- a/frontend/src/app/persons/persons.component.html
+++ b/frontend/src/app/persons/persons.component.html
@@ -1,4 +1,10 @@
 <div class="w-100">
   <p class="text-xl-900 text-green-500">persons works!</p>
   <app-person-table [persons]="persons"></app-person-table>
+
+<mat-paginator [length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 25, 100]"
+              aria-label="Select page">
+</mat-paginator>
 </div>
