--- a/frontend/src/app/persons/persons.component.html
+++ b/frontend/src/app/persons/persons.component.html
@@ -5,6 +5,7 @@
 <mat-paginator [length]="100"
               [pageSize]="10"
               [pageSizeOptions]="[5, 10, 25, 100]"
+               (page)="handlePageEvent($event)"
               aria-label="Select page">
 </mat-paginator>
 </div>
