--- a/frontend/src/app/persons/persons.component.html
+++ b/frontend/src/app/persons/persons.component.html
@@ -1,11 +1,30 @@
-<div class="w-100">
-  <p class="text-xl-900 text-green-500">persons works!</p>
+<div class="w-100 flex flex-col gap-4">
+<form [formGroup]="form">
+  <mat-form-field>
+    <mat-label>LastName</mat-label>
+    <input matInput formControlName="lastName">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>City</mat-label>
+    <input matInput formControlName="city">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker" formControlName="birthDate">
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+</form>
+
+
   <app-person-table [persons]="persons"></app-person-table>
 
-<mat-paginator [length]="totalItems"
-              [pageSize]="offset.pageSize"
-              [pageSizeOptions]="[5, 10, 25, 100]"
-               (page)="handlePageEvent($event)"
-              aria-label="Select page">
-</mat-paginator>
+  <mat-paginator [length]="totalItems"
+                 [pageSize]="offset.pageSize"
+                 [pageSizeOptions]="[5, 10, 25, 100]"
+                 (page)="handlePageEvent($event)"
+                 aria-label="Select page">
+  </mat-paginator>
 </div>
