--- a/frontend/src/app/persons/persons.component.html
+++ b/frontend/src/app/persons/persons.component.html
@@ -1,25 +1,24 @@
-<div class="w-100 flex flex-col gap-4">
-<form [formGroup]="form">
-  <mat-form-field>
-    <mat-label>LastName</mat-label>
-    <input matInput formControlName="lastName">
-  </mat-form-field>
+<div class="flex-auto w-2/3 flex flex-col gap-4">
+  <form [formGroup]="form">
+    <mat-form-field>
+      <mat-label>LastName</mat-label>
+      <input matInput formControlName="lastName">
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>City</mat-label>
-    <input matInput formControlName="city">
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>City</mat-label>
+      <input matInput formControlName="city">
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" formControlName="birthDate">
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-</form>
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="birthDate">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </form>
 
-
-  <app-person-table [persons]="persons"></app-person-table>
+  <app-person-table [persons]="persons" (selected)="handleSelected($event)"></app-person-table>
 
   <mat-paginator [length]="totalItems"
                  [pageSize]="offset.pageSize"
@@ -27,4 +26,10 @@
                  (page)="handlePageEvent($event)"
                  aria-label="Select page">
   </mat-paginator>
+</div>
+
+<div class="flex">
+  @if (selectedPerson) {
+    <app-person-detail [person]="selectedPerson"></app-person-detail>
+  }
 </div>
