--- a/frontend/src/app/person-table/person-detail/person-detail.component.html
+++ b/frontend/src/app/person-table/person-detail/person-detail.component.html
@@ -1,2 +1,25 @@
 <p>person-detail works!</p>
-{{ person | json }}
+  <form [formGroup]="form" class="flex flex-col" (ngSubmit)="save()">
+    <mat-form-field>
+      <mat-label>FirstName</mat-label>
+      <input matInput formControlName="firstName">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>LastName</mat-label>
+      <input matInput formControlName="lastName">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" formControlName="birthDate">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <button mat-flat-button color="primary" type="submit">Save</button>
+  </form>
