--- a/frontend/src/app/person-table/person-table.component.html
+++ b/frontend/src/app/person-table/person-table.component.html
@@ -37,5 +37,5 @@
 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.row-edited]="isEditable(row)"></tr>
 </table>
